--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ap-react-kit",
+  "name": "@adpushup/ap-react-kit",
   "version": "0.2.5",
   "description": "test",
   "main": "lib/commonjs/index",
