--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "homepage": "https://github.com/adpushup/ApReactKit#readme",
   "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
   },
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.7",
