--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,19 +5,7 @@ buildscript {
   repositories {
     google()
     mavenCentral()
-    // AdPushup Maven Repository
-    maven {
-      name 'apappkit'
-      url 'https://pkgs.dev.azure.com/adpushup/_packaging/adpushup/maven/v1'
-      credentials {
-        username "adpushup"
-        password "grs27r4xxaob7rds3h64xlh2ft6va2kx54l5jaqmhd3doh3ubc3q"
-      }
-      content {
-        // Does only include this group
-        includeGroup "adpushup"
-      }
-    }
+    maven { url 'https://jitpack.io' }
   }
 
   dependencies {
@@ -43,7 +31,7 @@ def getExtOrIntegerDefault(name) {
 }
 
 android {
-  compileSdkVersion getExtOrIntegerDefault('compileSdkVersion')
+  compileSdkVersion 33
 
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault('minSdkVersion')
@@ -69,19 +57,7 @@ android {
 repositories {
   mavenCentral()
   google()
-  // AdPushup Maven Repository
-  maven {
-    name 'apappkit'
-    url 'https://pkgs.dev.azure.com/adpushup/_packaging/adpushup/maven/v1'
-    credentials {
-      username "adpushup"
-      password "grs27r4xxaob7rds3h64xlh2ft6va2kx54l5jaqmhd3doh3ubc3q"
-    }
-    content {
-      // Does only include this group
-      includeGroup "adpushup"
-    }
-  }
+  maven { url 'https://jitpack.io' }
 
   def found = false
   def defaultDir = null
@@ -151,7 +127,7 @@ repositories {
 
 dependencies {
   // ApAppKit
-  implementation 'adpushup:ApAppKit:0.2.5'
+  implementation 'com.adpushup:ApAppKit:0.3.0'
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
